<resources>
    <string name="app_name">HopDrop</string>
    <string name="title_map">Map</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="owner">Owner</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="add">Add Park</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fee">Fee</string>
    <string name="additional_detail">Additional Details</string>
    <string name="make_order">Make Order</string>
    <string name="upload_qr">Please upload your Mobile Order QR code</string>
    <string name="save">SAVE</string>
    <string name="quit">QUIT</string>
    <string name="name">Name</string>
    <string name="login_name">Owner</string>
    <string name="login_button_text">login</string>
    <string name="map_title_name">Map</string>
    <string name="login_email_hint">JHU Email @JHU.edu</string>
    <string name="login_image_description">logo</string>
    <string name="orders_delivered">Total orders delivered:</string>
    <string name="cancel_text">Cancel</string>
    <string name="additional_details">Additional Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_courier">Your Courier</string>
    <string name="neworderbutton">newOrderButton</string>
    <string name="courier_name">Courier Name:&#160;</string>
    <string name="customer_name">Customer Name:&#160;</string>

    <string-array name="progress_bar">
        <item>Order Accepted</item>
        <item>Picked Up</item>
        <item>Delivered</item>
    </string-array>

</resources>