<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".NewPark">

    <EditText
        android:id="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#68ACE5"
        android:hint="@string/from" />

    <EditText
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#68ACE5"
        android:hint="@string/to" />

    <EditText
        android:id="@+id/fee"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#68ACE5"
        android:hint="@string/fee" />

    <EditText
        android:id="@+id/additional_details"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#68ACE5"
        android:hint="@string/additional_detail" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="75dp"
        android:layout_weight="1"
        android:text="@string/make_order"
        android:textColor="@color/brown" />

</LinearLayout>